website/websites/u64/code/spectralnorm.3.scala.log

Wed, 20 May 2015 00:55:00 GMT

MAKE:
mv spectralnorm.scala-3.scala spectralnorm.scala
/usr/local/src/scala-2.11.6/bin/scalac -optimise -target:jvm-1.8 spectralnorm.scala
Picked up JAVA_TOOL_OPTIONS: -javaagent:/usr/share/java/jayatanaag.jar 
spectralnorm.scala:53: error: identifier expected but ')' found.
      var w = Array.fill(chunkSize)(0.)
                                      ^
spectralnorm.scala:86: error: identifier expected but ')' found.
      var w = Array.fill(size)(0.)
                                 ^
two errors found
/home/dunham/benchmarksgame/nanobench/makefiles/u64.programs.Makefile:596: recipe for target 'spectralnorm.scala-3.scala_run' failed
make: [spectralnorm.scala-3.scala_run] Error 1 (ignored)
1.49s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.8.0_45/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.11.6/lib/scala-library.jar:/usr/local/src/scala-2.11.6/lib/akka-actors.jar:/usr/local/src/scala-2.11.6/lib/typesafe-config.jar spectralnorm 500

PROGRAM FAILED 


PROGRAM OUTPUT:

Picked up JAVA_TOOL_OPTIONS: -javaagent:/usr/share/java/jayatanaag.jar 
Error: Could not find or load main class spectralnorm
